# e2e_decentralized_messaging

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  e2e_decentralized_chat_summary.md  libverify.rlib  package-lock.json  test_out_of_order_delivery.py  test_ratchet_ordering.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
clients/android/: README.md
clients/desktop/: README.md
clients/desktop-tauri/: Cargo.toml  tauri.conf.json
clients/desktop-tauri/src-tauri/src/: backup.rs  commands.rs  error.rs  lib.rs  main.rs  ui.rs  verify.rs
clients/desktop-tauri/tests/: backup_restore_polish.rs  conversation_ui.rs  e2e_cross_client.rs  e2e_cross_client_real.rs  e2e_smoke.rs  safety_number_ui.rs  smoke.rs
clients/ios/: README.md
clients/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.config.ts.bak
clients/web/src/: App.tsx  BackupPanel.css  BackupPanel.tsx  Banner.css  Banner.tsx  Conversation.css  Conversation.tsx  DeviceLinking.css  DeviceLinking.tsx  GroupConversation.css  GroupConversation.tsx  SafetyNumberVerification.css  SafetyNumberVerification.tsx  WarningBanner.tsx  api.ts  backup.ts  browser_storage.ts  device_linking.ts  identity.ts  index.ts  main.tsx  relay_transport.ts  relay_websocket_transport.ts  storage.ts  storage_key.ts  stub_wasm.ts  useRelayConnection.tsx  wasm-bindings.d.ts  wasm_bindings.d.ts  wasm_bindings_js.d.ts  wasm_bindings_noext.d.ts  wasm_init.ts  wasm_wrapper.ts  websocket_transport.ts
clients/web/src/design/: AppShell.css  SealGlyph.tsx  fonts.css  global.css  tokens.css
clients/web/tests/: app_identity.test.tsx  backup.test.ts  backup_panel.test.tsx  backup_panel_storage_key.test.tsx  banner.test.ts  banner.test.tsx  browser_storage.test.ts  conversation.test.tsx  conversation_receive.test.tsx  conversation_session.test.tsx  csp.test.tsx  device_linking.test.ts  device_linking_ui.test.tsx  group_conversation.test.tsx  group_real_peer.test.tsx  group_send_receive.test.tsx  identity.test.ts  receive_loop_integration.test.tsx  relay_connection.test.tsx  relay_connection_warning.test.tsx  relay_integration.test.ts  relay_transport.test.ts  relay_websocket_transport.test.ts  safety_number.test.tsx  safety_number_persistence.test.tsx  smoke.test.ts  storage.test.ts  storage_key.test.ts  warning_banner.test.tsx
core/bindings/uniffi/: Cargo.toml
core/bindings/uniffi/src/: lib.rs
core/bindings/uniffi/tests/: contract.rs
core/bindings/wasm/: Cargo.toml
core/bindings/wasm/src/: lib.rs
core/bindings/wasm/tests/: wasm_group_encrypt.rs  wasm_prekey_session.rs  wasm_ratchet_encrypt.rs  wasm_safety_number.rs  wasm_smoke.rs
core/crypto/: Cargo.toml
core/crypto/src/: device_qr.rs  double_ratchet.rs  identity.rs  identity_ext.rs  lib.rs  prekey.rs  ratchet_session.rs  session.rs
core/crypto/tests/: device_qr.rs  double_ratchet.rs  prekey_replenish.rs  ratchet_session.rs  session_establishment.rs
core/protocol/: Cargo.toml
core/protocol/src/: fanout.rs  group.rs  lib.rs  linking.rs
core/protocol/tests/: linking.rs  member_add_distribution.rs  member_removal_rotation.rs  per_device_fanout.rs  sender_keys_group.rs
core/storage/: Cargo.toml
core/storage/src/: backup.rs  lib.rs
core/storage/tests/: backup_roundtrip.rs  envelope_parser_fuzz.rs  persistence_roundtrip.rs
core/transport/: Cargo.toml
core/transport/src/: dht.rs  lib.rs  metadata.rs  online.rs  padding.rs  privacy.rs  sealed_sender.rs
core/transport/tests/: dht_prekey.rs  dm_delivery.rs  metadata_padding.rs  noise_handshake.rs  sealed_sender.rs  tor_privacy_mode.rs
docs/: README.md  dependency-versions.md  threat-model.md  two-machine-testing.md
docs/audit/: Cargo.toml  findings.rs
docs/audit/src/: lib.rs
fuzz/: envelope_parser.rs
relay/: Cargo.toml
relay/src/: lib.rs  main.rs  store.rs  ws.rs
relay/src/pow/: mod.rs
relay/src/ratelimit/: mod.rs
relay/tests/: pow_rate_limit.rs  relay_behaviour.rs  store_forward_ttl.rs  ws_bridge.rs  ws_bridge_main.rs
spec/: README.md  v0.md
spec/proto/v0/: envelope.proto  prekey.proto  sealed_sender.proto
tests/: e2e_smoke.rs
