[package]
name = "relay"
version.workspace = true
edition.workspace = true
description = "Standalone, self-hostable blind store-and-forward relay node"

[[bin]]
name = "relay"
path = "src/main.rs"

# Test-only binary: starts the WS listener on a random localhost port, prints
# the bound address to stdout, and runs until killed. Used by the web client's
# cross-language integration test (clients/web/tests/relay_integration.test.ts)
# which shells out to `cargo run --bin relay_ws_test_harness` and connects via
# the TypeScript RelayTransport. Not shipped in production builds.
[[bin]]
name = "relay_ws_test_harness"
path = "src/bin/ws_test_harness.rs"

[lib]
name = "relay"
path = "src/lib.rs"

[dependencies]
libp2p = { workspace = true, features = ["tcp", "noise", "yamux", "tokio", "macros", "ping", "relay"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
# CSPRNG for challenge nonices. A unique, unpredictable nonce per challenge is
# what makes a solved proof-of-work non-replayable across challenges.
rand = { workspace = true }
# WebSocket listener: tokio-tungstenite provides an async WebSocket server that
# integrates with the relay's existing tokio runtime. This is the browser-facing
# transport bridge — browsers cannot open raw TCP/QUIC or run the libp2p stack.
tokio-tungstenite = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[dev-dependencies]
futures = "0.3"
tokio-tungstenite = "0.29"
