[package]
name = "core-crypto"
version.workspace = true
edition.workspace = true
description = "libsignal integration, identity, session, sender keys"

[lib]
name = "core_crypto"
path = "src/lib.rs"

[dependencies]
libsignal-protocol.workspace = true
rand.workspace = true
qrcode = { version = "0.14", default-features = false }
# SHA-256 of the public identity key → stable 32-byte peer id used as the transport-level
# address. Same minor version libsignal-protocol already pulls (see Cargo.lock), so this adds
# no new compiled copy.
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
# The signed-prekey-fallback acceptance test drives the real async
# `establish_outbound_session` against an `InMemSignalProtocolStore`, which needs these
# crate-level types directly. Dev-only — does not widen the public `crypto` API.
libsignal-protocol.workspace = true
rand.workspace = true
