[package]
name = "crypto"
version.workspace = true
edition.workspace = true
description = "libsignal integration, identity, session, sender keys"

[lib]
name = "crypto"
path = "src/lib.rs"

[dependencies]
libsignal-protocol.workspace = true
rand.workspace = true
qrcode = { version = "0.14", default-features = false }
# SHA-256 of the public identity key → stable 32-byte peer id used as the transport-level
# address. Same minor version libsignal-protocol already pulls (see Cargo.lock), so this adds
# no new compiled copy.
sha2 = "0.10"
# `session::establish_with_malformed_prekey` is a sync entry point (client shells call it without
# already running inside an async runtime), but the PQXDH establishment it drives is async. A
# current-thread runtime blocks on it in-process; `rt` is the only feature needed since nothing
# it drives performs real I/O.
tokio = { version = "1", features = ["rt"] }
# identity::seal_to/open_sealed: ephemeral-static ECDH + HKDF + AEAD sealing of arbitrary bytes
# to a PublicIdentityKey, so callers (e.g. protocol::group's per-member sender-key wrapper) never
# need to hand-roll crypto. Same construction and crate choices as
# core/transport/src/sealed_sender.rs (hkdf + chacha20poly1305), duplicated here rather than
# depending on `transport` from `crypto` to avoid a layering inversion (transport already depends
# on crypto).
hkdf = "0.12"
chacha20poly1305 = "0.10"
zeroize = "1.9.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
# The signed-prekey-fallback acceptance test drives the real async
# `establish_outbound_session` against an `InMemSignalProtocolStore`, which needs these
# crate-level types directly. Dev-only — does not widen the public `crypto` API.
libsignal-protocol.workspace = true
rand.workspace = true
