[package]
name = "core-protocol"
version.workspace = true
edition.workspace = true
description = "Message envelopes, prekey management, protobuf-generated types"

[lib]
name = "core_protocol"
path = "src/lib.rs"

[dependencies]
# Per-device fan-out uses the same `DoubleRatchetSession` facade the rest of the
# codebase already establishes 1:1 sessions through. Tying the fan-out to this
# audited facade — not to `libsignal` types directly — keeps per-device security
# posture identical to a single-device session and avoids re-introducing address /
# store types into the protocol crate (PLAN.md Phase 6 "Per-device session
# fan-out").
crypto.workspace = true
libsignal-protocol.workspace = true
# `DoubleRatchetSession`'s PQXDH establishment and Double Ratchet encrypt/decrypt
# are async over the `libsignal` session store. The fan-out API is sync (see the
# acceptance test in `tests/per_device_fanout.rs`), so we drive the underlying
# futures on a private multi-thread runtime per call. Tokio's `rt` feature is
# sufficient — we never need a reactor.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# thiserror for the public `FanoutError` enum; keeps the Display impls uniform
# with the rest of the workspace.
thiserror = "1"
