[package]
name = "storage"
version.workspace = true
edition.workspace = true
description = "SQLCipher-backed key/session/message store, backup export/import"

[lib]
name = "storage"
path = "src/lib.rs"

[dependencies]
rusqlite.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.14.0"
crypto = { package = "core-crypto", path = "../crypto" }
