[package]
name = "uniffi-bindings"
version.workspace = true
edition.workspace = true
description = "UniFFI bindings exposing the core to iOS/Android"

[lib]
name = "core_bindings_uniffi"
path = "src/lib.rs"

[dependencies]
crypto = { path = "../../crypto" }
uniffi = "0.32"
thiserror = "1"
aes-gcm = "0.10"

